--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rock Paper Scissors Mini App</title>
+
   <meta name="fc:miniapp" content='{
     "version": "1",
     "imageUrl": "https://farcaster-game.netlify.app/image.png",
@@ -18,12 +19,53 @@
       }
     }
   }' />
+
   <style>
-    body { margin: 0; background: #00BFFF; color: white; font-family: sans-serif; display:flex; flex-direction: column; align-items:center; justify-content:center; min-height:100vh; text-align:center;}
-    .choice-btn { padding:10px 20px; margin:10px; font-size:1.2rem; cursor:pointer; background:white; color:#00BFFF; border:none; border-radius:5px;}
-    #result { font-size:1.5rem; margin-top:20px;}
-    #reward-btn { display:none; padding:10px 20px; margin-top:10px; font-size:1.2rem; cursor:pointer; background:#28a745; color:white; border:none; border-radius:5px;}
-    #reward-btn.show { display:block; }
+    body {
+      margin: 0;
+      background: #00BFFF;
+      color: white;
+      font-family: sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
+      text-align: center;
+    }
+    .choice-btn {
+      padding: 10px 20px;
+      margin: 10px;
+      font-size: 1.2rem;
+      cursor: pointer;
+      background: white;
+      color: #00BFFF;
+      border: none;
+      border-radius: 5px;
+    }
+    #result {
+      font-size: 1.5rem;
+      margin-top: 20px;
+    }
+    #reward-btn {
+      display: none;
+      padding: 10px 20px;
+      margin-top: 10px;
+      font-size: 1.2rem;
+      cursor: pointer;
+      background: #28a745;
+      color: white;
+      border: none;
+      border-radius: 5px;
+    }
+    #reward-btn.show {
+      display: block;
+    }
+    #timer {
+      margin-top: 10px;
+      font-size: 1.2rem;
+      color: #ffd700;
+    }
   </style>
 </head>
 <body>
@@ -34,14 +76,28 @@
     <button class="choice-btn" id="scissors-btn">Scissors ✂️</button>
     <div id="result"></div>
     <button id="reward-btn">Claim Reward</button>
+    <div id="timer"></div>
   </div>
 
   <script type="module">
-    import { sdk } from 'https://esm.sh/@farcaster/miniapp-sdk';
-    import contractData from './contract.json' assert { type: 'json' };
+    import { sdk } from 'https://esm.sh/@farcaster/miniapp-sdk@1.0.0';
+    import { ethers } from 'https://cdn.jsdelivr.net/npm/ethers@6.13.0/dist/ethers.esm.min.js';
 
     let gameState = { choice: null, computerChoice: null, result: null };
     let isSdkReady = false;
+    let contractData = null;
+    let lastClaimTime = 0;
+    const CLAIM_INTERVAL = 4 * 60 * 60 * 1000; // 4 hours in ms
+
+    const resultDiv = document.getElementById('result');
+    const rewardBtn = document.getElementById('reward-btn');
+    const timerDiv = document.getElementById('timer');
+
+    // Load contract.json
+    fetch('./contract.json')
+      .then(res => res.json())
+      .then(data => { contractData = data; })
+      .catch(err => console.error('Contract JSON load error:', err));
 
     document.addEventListener('DOMContentLoaded', async () => {
       try {
@@ -55,7 +111,10 @@
         document.getElementById('scissors-btn').addEventListener('click', () => makeChoice('scissors'));
 
         // Reward button
-        document.getElementById('reward-btn').addEventListener('click', claimReward);
+        rewardBtn.addEventListener('click', claimReward);
+
+        updateTimer();
+        setInterval(updateTimer, 1000);
 
       } catch (error) {
         console.error('SDK Initialization Error:', error);
@@ -76,75 +135,60 @@
       ) gameState.result = 'win';
       else gameState.result = 'lose';
 
-      const resultDiv = document.getElementById('result');
       resultDiv.innerText = `You chose ${playerChoice}, Computer chose ${gameState.computerChoice}. Result: ${gameState.result}!`;
 
-      if(gameState.result==='win') checkCooldown();
-      else document.getElementById('reward-btn').classList.remove('show');
+      if(gameState.result==='win' && canClaim()) rewardBtn.classList.add('show');
+      else rewardBtn.classList.remove('show');
     }
 
-    async function checkCooldown() {
-      try {
-        const provider = await sdk.wallet.getEthereumProvider();
-        const contract = new ethers.Contract(contractData.address, contractData.abi, provider.getSigner());
-        const lastClaim = await contract.lastClaimed(await provider.request({ method: 'eth_accounts' })[0]);
-        const cooldown = await contract.claimCooldown();
-        const now = Math.floor(Date.now()/1000);
+    function canClaim() {
+      const now = Date.now();
+      return now - lastClaimTime >= CLAIM_INTERVAL;
+    }
 
-        if(now - lastClaim >= cooldown) {
-          document.getElementById('reward-btn').classList.add('show');
-          document.getElementById('result').innerText += ' 🎉 You can claim now!';
-        } else {
-          const remaining = cooldown - (now - lastClaim);
-          document.getElementById('reward-btn').classList.remove('show');
-          startCooldownTimer(remaining);
-        }
-      } catch(e) {
-        console.error(e);
+    function updateTimer() {
+      if(canClaim()) {
+        timerDiv.innerText = 'You can claim your reward now!';
+        if(gameState.result==='win') rewardBtn.classList.add('show');
+      } else {
+        const remaining = CLAIM_INTERVAL - (Date.now() - lastClaimTime);
+        const hours = Math.floor(remaining / 3600000);
+        const minutes = Math.floor((remaining % 3600000) / 60000);
+        const seconds = Math.floor((remaining % 60000) / 1000);
+        timerDiv.innerText = `Next claim in ${hours}h ${minutes}m ${seconds}s`;
+        rewardBtn.classList.remove('show');
       }
-    }
-
-    function startCooldownTimer(seconds) {
-      const resultDiv = document.getElementById('result');
-      let remaining = seconds;
-      resultDiv.innerText += ` ⏳ Claim available in ${formatTime(remaining)}`;
-      const timer = setInterval(()=>{
-        remaining--;
-        resultDiv.innerText = `You won! ⏳ Claim available in ${formatTime(remaining)}`;
-        if(remaining<=0){
-          clearInterval(timer);
-          document.getElementById('reward-btn').classList.add('show');
-          resultDiv.innerText = `🎉 You can claim your reward now!`;
-        }
-      },1000);
-    }
-
-    function formatTime(sec){
-      const h = Math.floor(sec/3600);
-      const m = Math.floor((sec%3600)/60);
-      const s = sec%60;
-      return `${h}h ${m}m ${s}s`;
     }
 
     async function claimReward() {
       try {
+        if(!isSdkReady) throw new Error('SDK not ready');
+        if(!contractData) throw new Error('Contract data not loaded');
+
         const provider = await sdk.wallet.getEthereumProvider();
+        if(!provider) throw new Error('Ethereum provider not available');
+
         const accounts = await provider.request({ method: 'eth_accounts' });
         const from = accounts[0];
-        const contract = new ethers.Contract(contractData.address, contractData.abi, provider.getSigner());
 
-        const tx = await contract.claimReward({ from });
-        document.getElementById('reward-btn').classList.remove('show');
-        document.getElementById('result').innerText += ` 🎉 Claimed reward! TX: ${tx.hash}`;
+        const tx = {
+          to: contractData.address,
+          data: contractData.claimRewardSelector,
+          from
+        };
+
+        const txHash = await provider.request({ method: 'eth_sendTransaction', params: [tx] });
+
+        lastClaimTime = Date.now();
+        rewardBtn.classList.remove('show');
+        resultDiv.innerText += ` 🎉 Claimed reward! TX: ${txHash}`;
+        updateTimer();
 
       } catch (error) {
         console.error('TX Error:', error);
-        document.getElementById('result').innerText += ' ❌ Reward claim failed. ' + (error.message || '');
+        resultDiv.innerText += ' ❌ Reward claim failed. ' + (error.message || '');
       }
     }
   </script>
-
-  <!-- Ethers.js 6.13.0 -->
-  <script type="module" src="https://cdn.jsdelivr.net/npm/ethers@6.13.0/dist/ethers.min.js"></script>
 </body>
 </html>
