--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rock Paper Scissors Mini App</title>
 
+  <!-- Farcaster miniapp meta -->
   <meta name="fc:miniapp" content='{
     "version": "1",
     "imageUrl": "https://farcaster-game.netlify.app/image.png",
@@ -18,7 +19,7 @@
         "splashBackgroundColor": "#00BFFF"
       }
     }
-  }'>
+  }' />
 
   <style>
     body {
@@ -58,7 +59,9 @@
       border: none;
       border-radius: 5px;
     }
-    #reward-btn.show { display: block; }
+    #reward-btn.show {
+      display: block;
+    }
     #cooldown {
       margin-top: 10px;
       font-size: 1rem;
@@ -77,49 +80,55 @@
     <div id="cooldown"></div>
   </div>
 
-  <!-- Module Scripts -->
-  <script type="module">
-    import { sdk } from 'https://esm.sh/@farcaster/miniapp-sdk';
-    import { ethers } from 'https://cdn.jsdelivr.net/npm/ethers@6.6.0/dist/ethers.esm.min.js';
-    import contractData from './contract.json' assert { type: 'json' };
+  <!-- Ethers UMD -->
+  <script src="https://cdn.jsdelivr.net/npm/ethers@6.6.0/dist/ethers.umd.min.js"></script>
+  <!-- Farcaster miniapp SDK -->
+  <script src="https://esm.sh/@farcaster/miniapp-sdk"></script>
 
+  <script>
+    const { sdk } = window;
     let gameState = { choice: null, computerChoice: null, result: null };
     let isSdkReady = false;
-    let lastClaim = 0;
+
+    let contractData = null;
+    const claimRewardSelector = '0xb88a802f'; // claimReward() selector
     const cooldownSeconds = 4 * 60 * 60; // 4 hours
+    let lastClaim = 0;
     let cooldownInterval = null;
 
     document.addEventListener('DOMContentLoaded', async () => {
       try {
         await sdk.actions.ready();
-        console.log('SDK Ready');
+        console.log('SDK Ready - Mini App Loaded');
         isSdkReady = true;
 
-        // Game buttons
+        // Fetch contract.json
+        const res = await fetch('./contract.json');
+        contractData = await res.json();
+
         document.getElementById('rock-btn').addEventListener('click', () => makeChoice('rock'));
         document.getElementById('paper-btn').addEventListener('click', () => makeChoice('paper'));
         document.getElementById('scissors-btn').addEventListener('click', () => makeChoice('scissors'));
 
         document.getElementById('reward-btn').addEventListener('click', claimReward);
 
-        // Load last claim from localStorage
         const stored = localStorage.getItem('lastClaim');
         if(stored) lastClaim = parseInt(stored);
         updateCooldown();
 
       } catch (error) {
-        console.error('SDK Initialization Error:', error);
+        console.error('Initialization Error:', error);
       }
     });
 
     function makeChoice(playerChoice) {
-      if(!isSdkReady) return;
+      if (!isSdkReady) return;
 
       gameState.choice = playerChoice;
       gameState.computerChoice = ['rock','paper','scissors'][Math.floor(Math.random()*3)];
 
-      if(playerChoice === gameState.computerChoice) gameState.result = 'tie';
-      else if(
+      if (playerChoice === gameState.computerChoice) gameState.result = 'tie';
+      else if (
         (playerChoice==='rock' && gameState.computerChoice==='scissors') ||
         (playerChoice==='paper' && gameState.computerChoice==='rock') ||
         (playerChoice==='scissors' && gameState.computerChoice==='paper')
@@ -170,25 +179,24 @@
         const provider = new ethers.BrowserProvider(window.ethereum);
         const signer = await provider.getSigner();
 
-        const contract = new ethers.Contract(
-          contractData.address,
-          contractData.abi,
-          signer
-        );
+        const tx = {
+          to: contractData.address,
+          data: claimRewardSelector,
+          from: await signer.getAddress()
+        };
 
-        const txResponse = await contract.claimReward();
+        const txResponse = await signer.sendTransaction(tx);
         lastClaim = Math.floor(Date.now()/1000);
         localStorage.setItem('lastClaim', lastClaim);
         updateCooldown();
 
         document.getElementById('reward-btn').classList.remove('show');
         document.getElementById('result').innerText += ` 🎉 Claimed reward! TX: ${txResponse.hash}`;
-      } catch (err) {
-        console.error('TX Error:', err);
-        document.getElementById('result').innerText += ' ❌ Reward claim failed. ' + (err.message || '');
+      } catch (error) {
+        console.error('TX Error:', error);
+        document.getElementById('result').innerText += ' ❌ Reward claim failed. ' + (error.message || '');
       }
     }
-
   </script>
 </body>
 </html>
